tests/ui/self/trait-fn.stderr
error: unexpected `self` parameter in function
  --> $DIR/trait-fn.rs:4:20
   |
LL |     fn c(foo: u32, self) {}
   |                    ^^^^ must be the first parameter of an associated function

error: aborting due to 1 previous error

